--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -5,6 +5,7 @@ target 'SundayFriends' do
   use_frameworks!
 
   # Pods for SundayFriends
+  pod 'GoogleSignIn'
 
   target 'SundayFriendsTests' do
     inherit! :search_paths
