--- a/Android/SundayFriendsHack/app/build.gradle
+++ b/Android/SundayFriendsHack/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
 
 
 
