--- a/rest-service/src/main/resources/application.properties
+++ b/rest-service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.jpa.hibernate.ddl-auto= none
 #spring.datasource.url = jdbc:mysql://localhost:3306/sunday_schema
-spring.datasource.url = jdbc:mysql://sundayfriends.c62g6f6vgqum.eu-west-1.rds.amazonaws.com/sundayfriends
+spring.datasource.url = jdbc:mysql://sundayfriends.clixbjjw0wzs.us-west-1.rds.amazonaws.com/sundayfriends
 #spring.datasource.username= root
-spring.datasource.username = admin
+spring.datasource.username = sundayfriends
 #spring.datasource.password = s@s@S2S2
-spring.datasource.password = adminadmin
+spring.datasource.password = SundayFriends1997
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #pring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
