--- a/rest-service/pom.xml
+++ b/rest-service/pom.xml
@@ -56,9 +56,13 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
 
+			<artifactId>poi-ooxml</artifactId>
 
-
+			<version>4.1.2</version>
+		</dependency>
 	</dependencies>
 
 
