--- a/Android/SundayFriendsHack/app/build.gradle
+++ b/Android/SundayFriendsHack/app/build.gradle
@@ -48,8 +48,9 @@ dependencies {
 
     //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    //Dropped support for Android 4
+    //implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
-
+    implementation "com.squareup.okhttp3:logging-interceptor:3.12.0"
 
 }
